# GenPod

./: .gitignore  QUICKSTART.md  README.md  debug_text_flow.py  download_models.sh  inspect_chattts.py  inspect_params.py  pyproject.toml  regenerate_final.py  run_tests.sh  seed_config.txt  test_episode_merged.md
src/genpod/: batch_generate.py  build_podcast.py  cli.py  concatenate_podcast.py  extract_bgm.py  generate_podcast.py  generate_sources.py  mix_podcast.py  pronunciations.py  text_aligner.py  text_processor.py
src/genpod.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/genpod/templates/: genpod.toml
tests/: test_audio.py  test_cli.py
